# portfolio-kelg

./: .gitattributes  README.md  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
app/: config.py  main.py
app/data/: certifications.json  certifications_fr.json  experience.json  experience_fr.json
app/locales/: en.json  fr.json
app/models/: schemas.py
app/services/: github_service.py
app/static/css/: styles.css  tailwind.css
app/static/js/: alpine-init.js
app/templates/: base.html  certifications.html  experience.html  index.html  projects.html
